<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_moisture_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.novaagrisystems.agrimeter.MoistureDetails"
    tools:showIn="@layout/activity_moisture_details"
    android:clipChildren="true">

    <TextView
        android:text="@string/moisture_screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:textSize="30sp"
        android:fontFamily="sans-serif"
        android:textStyle="normal|bold"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:textAllCaps="false" />

    <TextView
        android:text="@string/moisture_ok_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/summary"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:textSize="18sp"
        android:fontFamily="sans-serif" />


    <TextView
        tools:text="65%"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/currentValue"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:fontFamily="sans-serif-light"
        android:textSize="75sp" />

    <TextView
        tools:text="Your plants aren't getting enough light. Please consider a sunnier location or supplement with grow lights."
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/valueDescription"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/currentValue"
        android:textAlignment="textStart"
        android:gravity="start"
        android:fontFamily="sans-serif-light"
        android:minLines="3" />

    <org.eazegraph.lib.charts.ValueLineChart
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/moistureLight"

        app:egUseDynamicScaling="true"

        app:egUseOverlapFill="true"
        app:egLineStroke="1dp"

        app:egUseCubic="false"
        app:egCurveSmoothness="0.01"

        app:egIndicatorLineColor="@color/moistureAccent"
        app:egIndicatorTextColor="@color/moistureAccent"

        app:egLegendHeight="40dp"
        app:egLegendColor="@color/icons"

        app:egShowStandardValue="true"
        app:egXAxisStroke="2dp"

        app:egIndicatorTextUnit="%"
        app:egShowLegendBeneathIndicator="true"

        android:id="@+id/sensorGraph"
        android:layout_width="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/valueDescription"
        android:layout_height="150dp" />

    <TextView
        android:text="@string/moisture_meter_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/sensorGraph"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:textSize="18sp"
        android:textAllCaps="true" />

    <TextView
        tools:text="65.0%"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/moistureMeterLabel"
        android:textSize="30sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:textStyle="normal|bold" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/moistureMeter"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintHorizontal_bias="0.33"
        android:progress="0"
        tools:progress="65"
        android:max="100"
        app:layout_constraintTop_toBottomOf="@+id/moistureMeterLabel"
        android:layout_marginTop="8dp" />

    <TextView
        android:text="@string/moisture_low_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/low"
        app:layout_constraintTop_toBottomOf="@+id/moistureMeter"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp" />

    <TextView
        android:text="@string/moisture_high_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/high"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/moistureMeter"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp" />

    <TextView
        android:text="@string/moisture_ok_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ok"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/moistureMeter"
        app:layout_constraintRight_toRightOf="@+id/moistureMeter"
        app:layout_constraintLeft_toLeftOf="@+id/moistureMeter"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>
